# iot-freertos

./: .gitignore  CMakeLists.txt
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/coreHTTP/: CMakeLists.txt
components/coreMQTT/: CMakeLists.txt
main/: CMakeLists.txt  iot_freertos.c  led_control.c  led_control.h  time_sync.c  time_sync.h  wifi_connect.c  wifi_connect.h
src/: CMakeLists.txt
src/components/azure-iot-middleware-freertos/: CMakeLists.txt
src/components/coreHTTP/: CMakeLists.txt
src/main/: CMakeLists.txt
src/port/: azure_iot_flash_platform_port.h
